# serializer version: 1
# name: test_clean_ledger_envelope_snapshot
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no rationing breaches detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_over_ration_envelope_snapshot
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'sternum spent 3 times (max 2)',
    ]),
    'ok': False,
    'result': dict({
      'findings': list([
        dict({
          'bound': None,
          'count': 3,
          'device_id': 'sternum',
          'lines': list([
            dict({
              'chapter': 1,
              'line': 1,
            }),
            dict({
              'chapter': 1,
              'line': 2,
            }),
            dict({
              'chapter': 1,
              'line': 3,
            }),
          ]),
          'max_count': 2,
          'offending_chapters': list([
          ]),
          'passed': False,
          'pattern': '\\bsternum\\b',
          'ration_kind': 'max_count',
        }),
      ]),
      'violations': list([
        'sternum',
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
